--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="header__grid">
                 <div>
                     <a href="#homePage">
-                        <img id="logo" src="./static/logo.svg" alt="">
-                        <img id="logo-red" src="./static/logo-red.svg" alt="" style="display: none;">
+                        <img id="logo" src="./static/logo.svg" alt="logo">
+                        <img id="logo-red" src="./static/logo-red.svg" alt="logo" style="display: none;">
                     </a>
                 </div>
                 <nav class="header__nav">
@@ -46,7 +46,7 @@
                         <p>Thank you for your interest in WīF. Our website will be up and running soon. In the meantime, let us tell you a little bit about wīf and why it’s transforming the local fashion industry.</p>
                     </section>
                     <section class="landing__buttons">
-                        <a href="https://wa.me/15551234567">
+                        <a href="https://wa.me/6282223338897">
                             <div class="ask-button">
                                 <div class="ask-button__grid">
                                     <p>Ask Us Anything!</p>
