Add sample room image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <p class="txt-body">Located in Jakarta, WĪF has a designed sample room available for anyone. Booked through an appointment, you can view our complete fabric catalogues from the comfort of our sample room.  A sales assistance will be ready to assist you for the full services including requesting samples and placing orders during and after your visit. </p>
                     </section>
                     <section class="sample-room__image">
-                        <img src="" alt="">
+                        <img src="./static/sample-room.jpg" alt="sample-room-image">
                     </section>
                     <section class="sample-room__location">
                         <h3>Grand Rubina Business Park</h3>
