Change email address to admin

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="mailto:info@wifworld.com">
+                        <a href="mailto:admin@wifworld.com">
                             <div class="ask-button">
                                 <div class="ask-button__grid">
                                     <p>Email Us</p>
-                                    <p style="justify-self: end;">Info@wifworld.com</p>
+                                    <p style="justify-self: end;">admin@wifworld.com</p>
                                 </div>
                             </div>
                         </a>
